--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 quick-xml = "0.22"
-url = "2.2"
+url = "2.2.2"
+chrono = "0.4.19"
