--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ reqwest = { version = "0.11", features = ["blocking"] }
 quick-xml = "0.22"
 url = "2.2.2"
 chrono = "0.4.19"
+termion = "1.5"
+tui = "0.15"
