--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4.19"
+clap = "2.33"
 quick-xml = "0.22"
 reqwest = { version = "0.11", features = ["blocking"] }
 url = "2.2.2"
